@@ -791,13 +791,13 @@
 				"bearing" : "TIN",
 				"condition" : "AtLeast",
 				"item_type" : "BOULDER",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"bearing" : "COPPER",
 				"condition" : "AtLeast",
 				"item_type" : "BOULDER",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"condition" : "AtLeast",
@@ -828,13 +828,13 @@
 				"condition" : "AtLeast",
 				"item_type" : "BAR",
 				"material" : "INORGANIC:TIN",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"condition" : "AtLeast",
 				"item_type" : "BAR",
 				"material" : "INORGANIC:COPPER",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"condition" : "AtLeast",
@@ -1068,13 +1068,13 @@
 				"bearing" : "TIN",
 				"condition" : "AtLeast",
 				"item_type" : "BOULDER",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"bearing" : "COPPER",
 				"condition" : "AtLeast",
 				"item_type" : "BOULDER",
-				"value" : 5
+				"value" : 25
 			},
 			{
 				"condition" : "AtLeast",
